# DJANGO_STORE

./: .env.sample  .gitignore  README.md  catalog.json  pyproject.toml  requarement.txt
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: switch_on_fixture.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py
catalog/templates/: mak.html  products_list.html
catalog/templates/base/: home.html  menu.html
catalog/templates/catalog/: catalog.html  home.html
catalog/templatetags/: my_tags.py
myproject/: asgi.py  settings.py  urls.py  wsgi.py
