[project]
name = "django-store"
version = "0.1.0"
description = ""
authors = [
    {name = "origin",email = "yura28049119@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.link.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.16.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
django = "^5.2.1"
psycopg2 = "^2.9.10"
python-dotenv = "^1.1.0"
pillow = "^11.2.1"

